tests/baselines/reference/wellKnownSymbolExpando(strict=true).errors.txt
wellKnownSymbolExpando.ts(2,1): error TS7022: 'f[Symbol.iterator]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.


==== wellKnownSymbolExpando.ts (1 errors) ====
    function f() {}
    f[Symbol.iterator] = function() {}
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7022: 'f[Symbol.iterator]' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    